Sat Jun 27 16:56:33 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_cmp): use rb_num_coerce_cmp.

Sat Jun 27 16:45:10 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: revised rdoc.

	* rational.c: ditto.

	* numeric.c: ditto.

Sat Jun 27 13:44:48 2009  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS, lib/rss/maker/base.rb, test/rss/test_maker_2.0.rb: add
	item.guid.permanent_link? and item.guid.permanent_link=.

Sat Jun 27 13:41:00 2009  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: rss: 0.2.5 -> 0.2.7.

	* lib/rss/rss.rb, test/rss/test_version.rb: 0.2.6 -> 0.2.7.

Sat Jun 27 03:16:56 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (int_chr): use default_internal encoding as default
	  destination encoding if set.  [ruby-core:23997]

Sat Jun 27 03:09:04 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_rewind): need to rewind $. and ARGF.lineno.
	  [ruby-core:24046]

	* io.c (struct argf): refactoring on $. and ARGF.lineno behavior.

Fri Jun 26 21:48:30 2009  Tanaka Akira  <akr@fsij.org>

	* ext/pty/pty.c (pty_getpty): check dup failure.

Fri Jun 26 17:33:46 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb (TestRubyOptions#test_rubyopt):
	  test suite add '.' to RUBYLIB.  remove checks.

	* test/ruby/test_require.rb (TestRequire#test_tainted_loadpath):
	  the default tempdir directory /tmp is world writable, so
	  SecrurityError would be raised.  check removed.

Fri Jun 26 16:32:59 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (COMPILE_PRELUDE): need -I. before -rrbconfig.
	  [ruby-dev:38714]

Thu Jun 25 18:41:51 2009  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*.rb: Imported minitest 1.4.2 r5269.
	* test/minitest/*.rb: ditto.

Thu Jun 25 17:58:39 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_binmode_m): should call rb_io_ascii8bit_binmode() to
	  set its encoding to ASCII-8BIT.  [ruby-core:24029]
